--- a/templates/people.html.j2
+++ b/templates/people.html.j2
@@ -70,10 +70,10 @@
 											<a href= "{{ person.website }}" ><i class="fa fa-dribbble"></i></a>
 										{% endif %}
 										{% if person['twitter'] != "None" %}
-											<a href= {{  person.twitter }} ><i class="fa fa-twitter"></i></a>
+											<a href= "{{  person.twitter }}" ><i class="fa fa-twitter"></i></a>
 										{% endif %}	
 										{% if person['linkedin'] != "None" %}
-											<a href= {{  person.linkedin }} ><i class="fa fa-linkedin"></i></a>
+											<a href= "{{  person.linkedin }}" ><i class="fa fa-linkedin"></i></a>
 										{% endif %}
 										<p><button></button></p>
 										</div>
