--- a/templates/research_page_no_twitter.html.j2
+++ b/templates/research_page_no_twitter.html.j2
@@ -1,9 +1,9 @@
-<<html>
+<html>
 	<head>
 	<title> {{ general.website_title }} </title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="../assets/css/main.css" />
 	</head>
 	
 	<body class="right-sidebar is-preload">
@@ -18,7 +18,7 @@
 							<ul>
 								<li>
 								{% for page in general["navigation_bar"] %}
-								<li><a href="{{ page_link(page) }}.html">{{ page }}</a>
+								<li><a href="../{{ page_link(page) }}.html">{{ page }}</a>
 									{% if page in general %}
 										<ul>
 										{% for sub_page in general[page] %}
@@ -48,12 +48,13 @@
 						<div class="row">
 
 							<section class="col-6 col-12-narrower feature">
-								<div class="image-wrapper">
-									<a href="#" class="image featured"><img src=" {{ research.image_path }}" alt="" /></a>
-								</div>
-								<header>
+							<header>
 									<h2> {{ research.name }} </h2>
 								</header>
+								<div class="image-wrapper">
+									<a href="#" class="image featured"><img src=" ..{{ research.image_path }}" alt="" /></a>
+								</div>
+								
 								<p> {{ research.long_description  }}</p>
                                 <p>People:</p>
                                 {% for person in research['people'] %}
@@ -64,26 +65,24 @@
 					</div>
 				</div>
 
-			<!-- Footer -->
-				<div id="footer-wrapper">
-					<div id="footer">
-						<section id="footer">
-							<div>
-								<h6 class="icon maps fa-map">567 Wilson Rd, East Lansing, MI 48824</h6>
-							</div>
-						</section>
-					</div>
-				</div>
-
-		</div>
+		 <!-- Footer -->
+        <div id="footer-wrapper" >
+            <div id="footer">
+                <section id="footer">
+                    <div style="padding-left: 5%;" >
+                        <h6 class="icon maps fa-map"> {{ general.address }}</h6>
+                    </div>
+                </section>
+            </div>
+        </div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.dropotron.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
