orcid link changes

--- a/templates/people.html.j2
+++ b/templates/people.html.j2
@@ -78,8 +78,8 @@
 										{% if person['github'] != "None" %}
 											<a href= {{  person['github'] }} ><i class="fa fa-github"></i></a>
 										{% endif %}
-                                        {% if person['orcid'] != "None" %}
-											<a href= {{  person['orcid'] }} ><i class="fa fa-github"></i></a>
+										{% if person['orcid'] != "None" %}
+											<a href= {{ "https://orcid.org/"~person['orcid']}} ><i class="fa id-card-o"></i></a>
 										{% endif %}
 										<p><button></button></p>
 										</div>
@@ -129,8 +129,8 @@
 										{% if person['github'] != "None" %}
 											<a href= {{  person['github'] }} ><i class="fa fa-github"></i></a>
 										{% endif %}
-                                        {% if person['orcid'] != "None" %}
-											<a href= {{  person['orcid'] }} ><i class="fa fa-github"></i></a>
+										{% if person['orcid'] != "None" %}
+											<a href= {{ "https://orcid.org/"~person['orcid']}} ><i class="fa id-card-o"></i></a>
 										{% endif %}
 										<p><button></button></p>
 										</div>
