--- a/templates/people.html.j2
+++ b/templates/people.html.j2
@@ -79,7 +79,7 @@
 											<a href= {{  person['github'] }} ><i class="fa fa-github"></i></a>
 										{% endif %}
 										{% if person['orcid'] != "None" %}
-											<a href= {{ "https://orcid.org/"~person['orcid'] }} ><i class="fa id-card-o"></i></a>
+											<a href= {{ "https://orcid.org/"~person['orcid'] }} ><i class="fa fa-id-card-o"></i></a>
 										{% endif %}
 										<p><button></button></p>
 										</div>
@@ -130,7 +130,7 @@
 											<a href= {{  person['github'] }} ><i class="fa fa-github"></i></a>
 										{% endif %}
 										{% if person['orcid'] != "None" %}
-											<a href= {{ "https://orcid.org/"~person['orcid'] }} ><i class="fa id-card-o"></i></a>
+											<a href= {{ "https://orcid.org/"~person['orcid'] }} ><i class="fa fa-id-card-o"></i></a>
 										{% endif %}
 										<p><button></button></p>
 										</div>
