--- a/templates/people.html.j2
+++ b/templates/people.html.j2
@@ -49,7 +49,7 @@
 				<div class="row">
 					<section class="col-6 col-12-narrower feature">
 						<header>
-							<h2> {{ role[0]['role'] }} </h2>
+							<h2> {{ role_headers[loop.index] }} </h2>
 						</header>
 					</section>
 				</div>
