--- a/templates/contact.html.j2
+++ b/templates/contact.html.j2
@@ -1,4 +1,5 @@
 <html>
+    <!-- This will be the contact page -->
     <head>
         <title> {{ general.website_title }} </title>
         <meta charset="utf-8" />
@@ -11,7 +12,7 @@
             <div id="header-wrapper">
                 <div id="header" class="container">
                     <!-- Nav -->
-                    <nav id="nav">
+                    <nav id = "nav">
                         <ul>
                             <li>
                                 {% for page in general["navigation_bar"] %}
