--- a/templates/homepage.html.j2
+++ b/templates/homepage.html.j2
@@ -1,4 +1,5 @@
 <html>
+     <!-- This will be the home page -->
     <head>
         <title> {{ general.website_title }} </title>
         <meta charset="utf-8" />
