--- a/assets/css/style-liberty.css
+++ b/assets/css/style-liberty.css
@@ -19087,23 +19087,14 @@ form.search-box {
 .w3l-banner {
   background: url(../../website_files/images/banner1.jpg) no-repeat center;
   -ms-background-size: cover;
-  background-size: cover;
+  background-size: 80%;
   z-index: 0;
   position: relative;
   display: grid;
   align-items: center;
+  height: 600px;
 }
 
-.w3l-banner:before {
-  content: "";
-  background: rgba(103, 58, 183, 0.8);
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: -1;
-}
 
 .w3l-banner h3 {
   color: #fff;
@@ -19279,7 +19270,7 @@ span.text-italic {
 
 .w3l-stats-section:before {
   content: "";
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.4);
   position: absolute;
   top: 0;
   bottom: 0;
