--- a/designs/assets/css/style-liberty.css
+++ b/designs/assets/css/style-liberty.css
@@ -20355,7 +20355,7 @@ p.copy-footer-29 a:hover {
   }
 /*-- Research and contact --*/
 .breadcrumb-bg-about {
-  background: url(../../website_files/images/banner1.jpg) no-repeat 0px 0px;
+  background: url(../../website_files/images/crab.gif) no-repeat 0px 0px;
   background-size: cover;
   position: relative;
   z-index: 0;
